--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,10 @@
 								 content="ie=edge"
 						 >
 	  <link rel="icon" href="/favicon.ico" type="image/x-icon">
+	<link
+			rel="stylesheet"
+			href="./scss/style.scss"
+	>
              <title>Document</title>
 </head>
 <body class="wrapper">
